syntax = "proto3";

package stt;

service STTService {
  // 양방향 스트리밍 RPC: 클라이언트에서 요청 스트림을 받고 응답 스트림을 보냄
  rpc StreamAudio (stream AudioRequest) returns (stream AudioResponse);
}

message AudioRequest {
  oneof payload {
    AudioChunk audioChunk = 1;
    Pause pause = 2;
  }
}

message AudioChunk {
  bytes audio = 1;
}

message Pause {
  bool pause = 1;
}

message AudioResponse {
  string text = 1;
  float confidence = 2;
}
